# OnSite-Presence-Monitor

./: .gitignore  LICENSE  README.md  app.py  logger.py  pyproject.toml  requirements.txt  run_production.py  sample_gen_images.py  setup.cmd  start.cmd
api_client/: base_client.py  mock_client.py  monitor_g5_client.py
assets/: style.css
data/: sample_data.csv
docs/: CHANGELOG.md  TODO.md
tests/: test_app.py  test_mock_client.py  test_monitor_g5_client.py
tools/: image_resizer.py  sample_gen_images.py
