[project]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Office/Business :: Scheduling",
]

name = "OnSite Presence Monitor"
version = "1.0.0"
description = "Dash app for displaying what workers are currently clocked in."
authors = [
    { name = "Tom Erik Harnes", email = "teharnes@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/ProtoXCode/OnSite-Presence-Monitor"

[tool.setuptools]
packages = ["api_client"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools>61.0",
    "wheel",
    "dash",
    "waitress",
    "pyyaml",
    "pytest"
]

build-backend = "setuptools.build_meta"